--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/shop-api
 MONGODB_USER=nestjs
 MONGODB_PASSWORD=nestjs
+JWT_SECRET=nestjsjwtsecretsecurestring
